--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             <ImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/logo" />
 
             <View
                 android:layout_width="0dp"
@@ -126,6 +126,7 @@
                 android:layout_marginRight="-4dp"
                 android:background="@drawable/btn_purple_a400"
                 android:text="Login"
+                android:onClick="toMainActivity"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:textStyle="bold" />
@@ -145,6 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="New user? "
+                    android:onClick="toRegisterActivity"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/blue_grey_300" />
 
