--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -112,6 +112,7 @@
                 android:text="Create Account"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
+                android:onClick="toMainActivity"
                 android:textStyle="bold" />
 
             <View
