--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,5 +50,12 @@
     <color name="purple_A700">#AA00FF</color>
 
     <color name="light_green_700">#689F38</color>
+    <color name="secondaryText">#D9757575</color>
+    <color name="textGray">#616161</color>
+    <color name="primaryText">#212121</color>
+    <color name="timeColor">#A6616161</color>
+    <color name="white">#FFFFFF</color>
+    <color name="light_background">#f2f2f2</color>
+    <color name="rvDivider">#CCe0e0e0</color>
 
 </resources>
