--- a/app/src/main/res/layout/activity_stuff.xml
+++ b/app/src/main/res/layout/activity_stuff.xml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/purple_A700"
-                app:title="Stuff"
+                app:title="Staff"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:contentInsetStartWithNavigation="0dp"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
