--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -623,7 +623,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginBottom="@dimen/spacing_medium"
                                         android:layout_marginTop="50dp"
-                                        android:text="Stuff"
+                                        android:text="Attendant"
                                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                         android:textColor="@color/grey_80"
                                         app:fontFamily="sans-serif-medium"/>
